--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,5 +15,19 @@
 
 ::-webkit-scrollbar-thumb {
     background-color: transparent;
+}
+
+html {
+    font-family: var(--tw-font-family, 'Nunito', sans-serif);
+}
+
+input:not([type="date"]):-webkit-autofill,
+textarea:-webkit-autofill,
+select:-webkit-autofill {
+    background-color: inherit !important;
+    color: inherit !important;
+    box-shadow: inherit !important;
+    -webkit-box-shadow: inherit !important;
+    transition: background-color 5000s ease-in-out 0s;
 }
 
